test fixing problem with Ai