@@ -29,7 +29,7 @@ public class TelegramVoiceHandler {
 
         String escapedText = TextConverter.escapeMarkdownV2(gptGeneratedText);
 
-        String messageText = String.format("[%s](tg://user?id=%d), %s", "*" + userName + "*", userId, escapedText);
+        String messageText = "[%s](tg://user?id=%d), %s".formatted("*" + userName + "*", userId, escapedText);
 
         SendMessage sendMessage = new SendMessage(message.getChatId().toString(), messageText);
         sendMessage.setReplyToMessageId(message.getMessageId());
